updated models and readme

--- a/2. Price Predictor/01. bagging pipeline.ipynb
+++ b/2. Price Predictor/01. bagging pipeline.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d3202479",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d773112d-9a89-4ff5-b452-39136c2c0c9c",
    "metadata": {
     "tags": []
@@ -748,7 +748,7 @@
        "4                  0.000                  0.857   3.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d9b20c11-bd74-47d7-9fe0-d07a17af55a6",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1454,7 @@
        "5                  0.116                  0.760   8.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7025c01b-118f-475d-a1af-fc5e4a891250",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "641f2560",
    "metadata": {
     "tags": []
@@ -1550,6 +1550,7 @@
     "     'number_of_reviews',\n",
     "     'bike_scores',\n",
     "    'walk_scores',\n",
+    "    'transit_scores',\n",
     "    'host_sent_compound', \n",
     "    'description_sent_compound', \n",
     "    'neighborhood_sent_compound',\n",
@@ -1563,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "727be020-528c-4b97-9bfb-e28438495b67",
    "metadata": {
     "tags": []
@@ -1575,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "482ee6bd",
    "metadata": {},
    "outputs": [],
@@ -1601,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4d538a1d-3aa4-4437-9655-01e9ed960676",
    "metadata": {
     "tags": []
@@ -1630,6 +1631,7 @@
        "                                                   'maximum_nights',\n",
        "                                                   'number_of_reviews',\n",
        "                                                   'bike_scores', 'walk_scores',\n",
+       "                                                   'transit_scores',\n",
        "                                                   'host_sent_compound',\n",
        "                                                   'description_sent_compound',\n",
        "                                                   'neighborhood_sent_compound']),\n",
@@ -1641,7 +1643,7 @@
        "                ('model', BaggingRegressor())])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,20 +1943,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ba8edeed-a261-441a-99c4-181fa0c3e1cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=Pipeline(steps=[('preprocessor',\n",
+       "                                        ColumnTransformer(transformers=[('num',\n",
+       "                                                                         Pipeline(steps=[('scaler',\n",
+       "                                                                                          StandardScaler())]),\n",
+       "                                                                         ['accommodates',\n",
+       "                                                                          'bathrooms',\n",
+       "                                                                          'bedrooms',\n",
+       "                                                                          'beds_adjusted',\n",
+       "                                                                          'has_neighborhood_overview',\n",
+       "                                                                          'has_reviews',\n",
+       "                                                                          'instant_bookable',\n",
+       "                                                                          'host_lives_in_neighborhood',\n",
+       "                                                                          'host_is_superhost',\n",
+       "                                                                          'host_has_profile_pic',\n",
+       "                                                                          'host_identity_ve...\n",
+       "                                                                          'host_sent_compound',\n",
+       "                                                                          'description_sent_compound',\n",
+       "                                                                          'neighborhood_sent_compound']),\n",
+       "                                                                        ('cat',\n",
+       "                                                                         Pipeline(steps=[('onehot',\n",
+       "                                                                                          OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "                                                                         ['shared_status',\n",
+       "                                                                          'neighborhood'])])),\n",
+       "                                       ('model', BaggingRegressor())]),\n",
+       "             param_grid={'model__bootstrap': [True, False],\n",
+       "                         'model__bootstrap_features': [True, False],\n",
+       "                         'model__max_samples': [0.5],\n",
+       "                         'model__n_estimators': [400]})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gs.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "debb3da1-61f5-40c3-a4f2-1192435d2be1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 84.37979788936113\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = gs.predict(X_test)\n",
     "rmse = (mean_squared_error(y_test, y_pred))**0.5\n",
@@ -1963,26 +2012,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6ae9baba-fbc0-4c1f-a691-1eb2dd883fd5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model__bootstrap': False,\n",
+       " 'model__bootstrap_features': True,\n",
+       " 'model__max_samples': 0.5,\n",
+       " 'model__n_estimators': 400}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gs.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2b83444f-b2a0-4b2a-8be6-5b1572ee3fda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('../pickle/bagged.pkl', 'wb') as f:\n",
-    "#     pickle.dump(gs.best_estimator_, f)"
+    "with open('../pickle/bagged.pkl', 'wb') as f:\n",
+    "    pickle.dump(gs.best_estimator_, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bbe8c2d-545b-418e-ac9e-cb4d1299b615",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
