--- a/2. Price Predictor/03. gradient boost pipeline.ipynb
+++ b/2. Price Predictor/03. gradient boost pipeline.ipynb
@@ -489,6 +489,7 @@
     "     'number_of_reviews',\n",
     "     'bike_scores',\n",
     "    'walk_scores',\n",
+    "    'transit_scores',\n",
     "    'host_sent_compound', \n",
     "    'description_sent_compound', \n",
     "    'neighborhood_sent_compound']]\n",
