--- a/2. Price Predictor/05. RF log pipeline.ipynb
+++ b/2. Price Predictor/05. RF log pipeline.ipynb
@@ -469,24 +469,31 @@
    "source": [
     "X = df[[\n",
     "    'shared_status', \n",
-    "    'accommodates', \n",
+    "    'accommodates',\n",
     "    'bathrooms', \n",
-    "    'bedrooms', \n",
-    "    'beds_adjusted', \n",
+    "    'bedrooms',\n",
+    "    'beds_adjusted',\n",
     "    'neighborhood', \n",
-    "    'has_neighborhood_overview',\n",
-    "    'host_identity_verified',\n",
+    "    'has_neighborhood_overview', \n",
+    "    'has_reviews',\n",
+    "    'instant_bookable',\n",
+    "    'host_lives_in_neighborhood',\n",
+    "     'host_is_superhost', \n",
     "    'host_has_profile_pic',\n",
-    "    'has_host_about',\n",
-    "    'host_lives_in_neighborhood', \n",
-    "    'license_listed',\n",
-    "    'bike_scores', \n",
-    "    'walk_scores',\n",
+    "    'host_identity_verified', \n",
+    "    'has_host_about', \n",
+    "    'years_hosting',\n",
+    "    'license_listed', \n",
     "    'minimum_nights',\n",
     "    'maximum_nights',\n",
-    "    'instant_bookable'    \n",
-    "      ]]\n",
-    "\n",
+    "     'number_of_reviews',\n",
+    "     'bike_scores',\n",
+    "    'walk_scores',\n",
+    "    'transit_scores',\n",
+    "    'host_sent_compound', \n",
+    "    'description_sent_compound', \n",
+    "    'neighborhood_sent_compound',\n",
+    "]]\n",
     "\n",
     "y = np.log(df['price'])"
    ]
