--- a/2. Price Predictor/04. RF pipeline.ipynb
+++ b/2. Price Predictor/04. RF pipeline.ipynb
@@ -468,22 +468,32 @@
    "outputs": [],
    "source": [
     "X = df[[\n",
-    "       'shared_status', 'accommodates',\n",
-    "       'bathrooms', 'bedrooms', 'beds_adjusted',\n",
-    "       'neighborhood', 'has_neighborhood_overview', 'has_reviews',\n",
-    "        'host_lives_in_neighborhood',\n",
-    "       'host_is_superhost', 'host_listings_count',\n",
-    "       'host_total_listings_count', 'host_has_profile_pic',\n",
-    "       'host_identity_verified', 'has_host_about', 'years_hosting',\n",
-    "        'license_listed', \n",
-    "       'minimum_nights',\n",
-    "       'maximum_nights',\n",
-    "       'number_of_reviews',\n",
-    "         'bike_scores',\n",
-    "       'walk_scores',\n",
-    "       'host_sent_compound', \n",
-    "       'description_sent_compound', \n",
-    "       'neighborhood_sent_compound']]\n",
+    "    'shared_status', \n",
+    "    'accommodates',\n",
+    "    'bathrooms', \n",
+    "    'bedrooms',\n",
+    "    'beds_adjusted',\n",
+    "    'neighborhood', \n",
+    "    'has_neighborhood_overview', \n",
+    "    'has_reviews',\n",
+    "    'instant_bookable',\n",
+    "    'host_lives_in_neighborhood',\n",
+    "     'host_is_superhost', \n",
+    "    'host_has_profile_pic',\n",
+    "    'host_identity_verified', \n",
+    "    'has_host_about', \n",
+    "    'years_hosting',\n",
+    "    'license_listed', \n",
+    "    'minimum_nights',\n",
+    "    'maximum_nights',\n",
+    "     'number_of_reviews',\n",
+    "     'bike_scores',\n",
+    "    'walk_scores',\n",
+    "    'transit_scores',\n",
+    "    'host_sent_compound', \n",
+    "    'description_sent_compound', \n",
+    "    'neighborhood_sent_compound',\n",
+    "]]\n",
     "    \n",
     "    \n",
     "\n",
