without large file

--- a/1. Preprocessing/02. API.ipynb
+++ b/1. Preprocessing/02. API.ipynb
@@ -99,7 +99,7 @@
     "# the TransitScore for the location\n",
     "result.transit_score\n",
     "\n",
-    "#according to forums online, the transit score isn't included with the stanard API...  "
+    "#according to forums online, the transit score isn't included with the stanard API...  emailed WalkScore and had it added"
    ]
   },
   {
