--- a/1. Preprocessing/03. NLP on listing.ipynb
+++ b/1. Preprocessing/03. NLP on listing.ipynb
@@ -615,7 +615,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#doing sentiment analysis on words, there have to be words. Neutral is not weighted either direction.  \n",
+    "#doing sentiment analysis on words, there have to be words. 'blank' is not weighted either direction. \n",
+    "\n",
     "listings['name'].fillna('blank', inplace=True)\n",
     "listings['host_about'].fillna('blank', inplace=True)\n",
     "listings['neighborhood_overview'].fillna('blank', inplace=True)\n",
@@ -649,13 +650,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# repeating this process for other columns\n",
+    "\n",
     "sia = SentimentIntensityAnalyzer()\n",
     "\n",
-    "# Iterate over the rows of the DataFrame\n",
+    "\n",
     "for index, row in listings.iterrows():\n",
-    "    # Apply VADER sentiment analysis to the comment\n",
+    "\n",
     "    sentiments = sia.polarity_scores(row['host_about'])\n",
-    "    # Update the sentiment scores for this row\n",
+    "\n",
     "    listings.at[index, 'host_sent_compound'] = sentiments['compound']\n",
     "    listings.at[index, 'host_sent_pos'] = sentiments['pos']\n",
     "    listings.at[index, 'host_sent_neg'] = sentiments['neg']\n",
@@ -671,11 +674,11 @@
    "source": [
     "sia = SentimentIntensityAnalyzer()\n",
     "\n",
-    "# Iterate over the rows of the DataFrame\n",
+    "\n",
     "for index, row in listings.iterrows():\n",
-    "    # Apply VADER sentiment analysis to the comment\n",
+    "\n",
     "    sentiments = sia.polarity_scores(row['description'])\n",
-    "    # Update the sentiment scores for this row\n",
+    "\n",
     "    listings.at[index, 'description_sent_compound'] = sentiments['compound']\n",
     "    listings.at[index, 'description_sent_pos'] = sentiments['pos']\n",
     "    listings.at[index, 'description_sent_neg'] = sentiments['neg']\n",
@@ -691,11 +694,11 @@
    "source": [
     "sia = SentimentIntensityAnalyzer()\n",
     "\n",
-    "# Iterate over the rows of the DataFrame\n",
+    "\n",
     "for index, row in listings.iterrows():\n",
-    "    # Apply VADER sentiment analysis to the comment\n",
+    "\n",
     "    sentiments = sia.polarity_scores(row['neighborhood_overview'])\n",
-    "    # Update the sentiment scores for this row\n",
+    "\n",
     "    listings.at[index, 'neighborhood_sent_compound'] = sentiments['compound']\n",
     "    listings.at[index, 'neighborhood_sent_pos'] = sentiments['pos']\n",
     "    listings.at[index, 'neighborhood_sent_neg'] = sentiments['neg']\n",
@@ -1410,14 +1413,6 @@
    "source": [
     "listings.to_csv('../data/cleaned_api_sentiment2.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d6db8ee-16bd-4e41-b3e3-1d93adaa98b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
