--- a/1. Preprocessing/05. Review Sentiment Analysis.ipynb
+++ b/1. Preprocessing/05. Review Sentiment Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e4ba6c74-5d1a-4866-bb68-f51b48ab4013",
    "metadata": {},
    "outputs": [],
@@ -1541,9 +1541,6 @@
    "execution_count": 60,
    "id": "f403353c-c2dc-4163-8caa-30d6fa0916fd",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1564,104 +1561,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "ca2e131a-debc-4f3e-a035-8cbd235c3989",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "id                                 0\n",
-       "latitude                           0\n",
-       "longitude                          0\n",
-       "price                              0\n",
-       "shared_status                      0\n",
-       "accommodates                       0\n",
-       "accomodation_group                 0\n",
-       "bathrooms                          0\n",
-       "bedrooms                           0\n",
-       "beds_adjusted                      0\n",
-       "neighborhood                       0\n",
-       "city                               0\n",
-       "has_neighborhood_overview          0\n",
-       "has_reviews                        0\n",
-       "host_in_CO                         0\n",
-       "host_lives_in_neighborhood         0\n",
-       "host_id                            0\n",
-       "host_name                          0\n",
-       "host_response_time               534\n",
-       "host_response_rate               534\n",
-       "host_acceptance_rate             262\n",
-       "host_is_superhost                  0\n",
-       "host_neighbourhood               259\n",
-       "host_listings_count                0\n",
-       "host_total_listings_count          0\n",
-       "host_has_profile_pic               0\n",
-       "host_identity_verified             0\n",
-       "has_host_about                     0\n",
-       "years_hosting                      0\n",
-       "years_of_reviews                   0\n",
-       "license_listed                     0\n",
-       "response_time                      0\n",
-       "host_lives_in_neighborhood.1       0\n",
-       "name                               0\n",
-       "host_about                         0\n",
-       "description                        0\n",
-       "neighborhood_overview              0\n",
-       "amenities                          0\n",
-       "minimum_nights                     0\n",
-       "maximum_nights                     0\n",
-       "min_stay_group                     0\n",
-       "max_stay_group                     0\n",
-       "has_availability                   0\n",
-       "availability_30                    0\n",
-       "availability_60                    0\n",
-       "availability_90                    0\n",
-       "availability_365                   0\n",
-       "instant_bookable                   0\n",
-       "number_of_reviews                  0\n",
-       "number_of_reviews_ltm              0\n",
-       "number_of_reviews_l30d             0\n",
-       "review_scores_rating             162\n",
-       "review_scores_accuracy           166\n",
-       "review_scores_cleanliness        166\n",
-       "review_scores_checkin            166\n",
-       "review_scores_communication      166\n",
-       "review_scores_location           166\n",
-       "review_scores_value              166\n",
-       "reviews_per_month                162\n",
-       "bike_scores                        0\n",
-       "walk_scores                        0\n",
-       "transit_scores                  3037\n",
-       "property_page_links                0\n",
-       "name_sent_compound                 0\n",
-       "name_sent_pos                      0\n",
-       "name_sent_neg                      0\n",
-       "name_sent_neu                      0\n",
-       "host_sent_compound                 0\n",
-       "host_sent_pos                      0\n",
-       "host_sent_neg                      0\n",
-       "host_sent_neu                      0\n",
-       "description_sent_compound          0\n",
-       "description_sent_pos               0\n",
-       "description_sent_neg               0\n",
-       "description_sent_neu               0\n",
-       "neighborhood_sent_compound         0\n",
-       "neighborhood_sent_pos              0\n",
-       "neighborhood_sent_neg              0\n",
-       "neighborhood_sent_neu              0\n",
-       "25*k                               0\n",
-       "comments                           0\n",
-       "review_sent_compound               0\n",
-       "review_sent_pos                    0\n",
-       "review_sent_neg                    0\n",
-       "review_sent_neu                    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'merged' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f5/d5gp33rs3pj8ngm1m9by8vn80000gn/T/ipykernel_2192/2280469650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmerged\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'merged' is not defined"
+     ]
     }
    ],
    "source": [
