--- a/2. Price Predictor/07. Bagged GB and XG.ipynb
+++ b/2. Price Predictor/07. Bagged GB and XG.ipynb
@@ -876,7 +876,7 @@
    "id": "d72a238d-a1f7-49e1-b55a-fa37942dd49f",
    "metadata": {},
    "source": [
-    "# I want to try a Bagged Extra trees\n",
+    "# Bagged Extra Trees with skewed data\n",
     "Apparently a transformedtargetregressor works well when the traget is not normally distributed, like my price data "
    ]
   },
