--- a/2. Price Predictor/07. Bagged models ET GB and XG.ipynb
+++ b/2. Price Predictor/07. Bagged models ET GB and XG.ipynb
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 213,
    "id": "d3315dc0-9250-473a-abbd-437e0b3f0ef4",
    "metadata": {},
    "outputs": [],
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 233,
    "id": "3da26abe-7911-4f4c-ba26-7178287ba58f",
    "metadata": {},
    "outputs": [],
@@ -2916,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 234,
    "id": "c2cefaea-6d88-4549-8f36-8573165e34dd",
    "metadata": {},
    "outputs": [
@@ -2957,7 +2957,7 @@
        "                         'model__n_estimators': [40]})"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2969,7 +2969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 235,
    "id": "ff499666-6cfc-42c7-8371-298d5343e6dd",
    "metadata": {},
    "outputs": [
@@ -2977,8 +2977,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train RMSE: 57.89654633693187\n",
-      "Test RMSE: 54.03371101919869\n"
+      "Train RMSE: 58.02799417624021\n",
+      "Test RMSE: 54.08210445661191\n"
      ]
     }
    ],
@@ -3094,7 +3094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 236,
    "id": "67347783-5ba7-432e-bcb5-b75da8f6c745",
    "metadata": {},
    "outputs": [
@@ -3106,7 +3106,7 @@
        " 'model__n_estimators': 40}"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,11 +3117,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "id": "25bab071-0f89-401f-b514-358b362737dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "paramsXG_lambda = {\n",
+    "    'model__n_estimators': [40],\n",
+    "    'model__base_estimator__learning_rate' : [None],\n",
+    "    'model__base_estimator__max_depth': [4],\n",
+    "    'model__base_estimator__reg_alpha': [8,10,12]\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "9eabeec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['objective', 'base_score', 'booster', 'callbacks', 'colsample_bylevel', 'colsample_bynode', 'colsample_bytree', 'early_stopping_rounds', 'enable_categorical', 'eval_metric', 'feature_types', 'gamma', 'gpu_id', 'grow_policy', 'importance_type', 'interaction_constraints', 'learning_rate', 'max_bin', 'max_cat_threshold', 'max_cat_to_onehot', 'max_delta_step', 'max_depth', 'max_leaves', 'min_child_weight', 'missing', 'monotone_constraints', 'n_estimators', 'n_jobs', 'num_parallel_tree', 'predictor', 'random_state', 'reg_alpha', 'reg_lambda', 'sampling_method', 'scale_pos_weight', 'subsample', 'tree_method', 'validate_parameters', 'verbosity'])"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimator.get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "9745efb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=Pipeline(steps=[('preprocessor',\n",
+       "                                        ColumnTransformer(transformers=[('num',\n",
+       "                                                                         Pipeline(steps=[('scaler',\n",
+       "                                                                                          StandardScaler())]),\n",
+       "                                                                         ['accommodates',\n",
+       "                                                                          'bathrooms',\n",
+       "                                                                          'bedrooms',\n",
+       "                                                                          'beds_adjusted',\n",
+       "                                                                          'has_neighborhood_overview',\n",
+       "                                                                          'has_reviews',\n",
+       "                                                                          'instant_bookable',\n",
+       "                                                                          'host_lives_in_neighborhood',\n",
+       "                                                                          'host_is_superhost',\n",
+       "                                                                          'host_has_profile_pic',\n",
+       "                                                                          'host_identity_ve...\n",
+       "                                                                                     max_cat_to_onehot=None,\n",
+       "                                                                                     max_delta_step=None,\n",
+       "                                                                                     max_depth=None,\n",
+       "                                                                                     max_leaves=None,\n",
+       "                                                                                     min_child_weight=None,\n",
+       "                                                                                     missing=nan,\n",
+       "                                                                                     monotone_constraints=None,\n",
+       "                                                                                     n_estimators=100,\n",
+       "                                                                                     n_jobs=None,\n",
+       "                                                                                     num_parallel_tree=None,\n",
+       "                                                                                     predictor=None,\n",
+       "                                                                                     random_state=None, ...)))]),\n",
+       "             param_grid={'model__base_estimator__learning_rate': [None],\n",
+       "                         'model__base_estimator__max_depth': [4],\n",
+       "                         'model__n_estimators': [40]})"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsXG_L2 = GridSearchCV(pipeline3, param_grid=paramsXG_lambda, cv=5)\n",
+    "gsXG_L2.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "a5a9e544",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train RMSE: 55.38789485489552\n",
+      "Test RMSE: 81.39939721208273\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_train = gsXG_L2.predict(X_train)\n",
+    "rmse_train = (mean_squared_error(y_train, y_pred_train))**0.5\n",
+    "print(\"Train RMSE:\", rmse_train)\n",
+    "\n",
+    "y_pred = gsXG_L2.predict(X_test)\n",
+    "rmse = (mean_squared_error(y_test, y_pred))**0.5\n",
+    "print(\"Test RMSE:\", rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "ddef3b54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model__base_estimator__learning_rate': None,\n",
+       " 'model__base_estimator__max_depth': 4,\n",
+       " 'model__n_estimators': 40}"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsXG_L2.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b249f491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#so my initial model was likely overfit..  "
+   ]
   }
  ],
  "metadata": {
